<resources>
    <string name="app_name">Kingdom Hearts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_khbbs">KH Birth by Sleep</string>
    <string name="menu_kh3">KH3</string>

    <string name="khbbs_tabs_all">All commands</string>
    <string name="khbbs_tabs_command">Per Command</string>
    <string name="khbbs_tabs_effect">Per Effect</string>

    <string name="khbbs_meld_title">Command Melding</string>
</resources>