<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="acdc.kingdomhearts.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_khbbs"
        android:name="acdc.kingdomhearts.ui.khbbs.BirthBySleepFragment"
        android:label="@string/menu_khbbs"
        tools:layout="@layout/fragment_khbbs" />

    <fragment
        android:id="@+id/nav_kh3"
        android:name="acdc.kingdomhearts.ui.kh3.KingdomHearts3Fragment"
        android:label="@string/menu_kh3"
        tools:layout="@layout/fragment_kh3" />
</navigation>